# dummy

./: db.py  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 10a3ed5d0779_added_required_tables.py
project/: settings.py
