[tool.poetry]
name = "dummy"
version = "0.1.0"
description = ""
authors = ["JKharidinova <haridinova@soft-way.biz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
